--- a/style.css
+++ b/style.css
@@ -18,17 +18,17 @@ body, html {
 }
 
 .pimg1 {
-    background-image: url("../img/1.jpg");
+    background-image: url("img/1.jpg");
     min-height: 100%;
 }
 
 .pimg2 {
-    background-image: url("../img/2.jpg");
+    background-image: url("img/2.jpg");
     min-height: 400px;
 }
 
 .pimg3 {
-    background-image: url("../img/3.jpg");
+    background-image: url("img/3.jpg");
     min-height: 400px;
 }
 
