--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body, html {
 }
 
 .pimg1 {
-    background-image: url("parallax/img/1.jpg");
+    background-image: url("img/1.jpg");
     min-height: 100%;
 }
 
